@@ -1,3 +1,9 @@
+1998-09-12  Ben Elliston  <bje@cygnus.com>
+
+	* windows.h: No longer needed; remove.
+
+	* windows.c: Likewise.
+
 Sat Sep 12 20:09:24 1998  Ross Johnson  <rpj@ixobrychus.canberra.edu.au>
 
 	* windows.h: Remove error number definitions. These are in <errno.h>
